# trafficserver

./: CACHE_TESTING.md  create_cache_entry.py  populate_cache.py  populate_video.py
android-simple/: .gitignore  README.md  settings.gradle
android-simple/app/: build.gradle
android-simple/app/src/main/: AndroidManifest.xml
android-simple/app/src/main/java/org/apache/trafficserver/android/: MainActivity.kt  SimpleProxyService.kt
android-simple/app/src/main/res/layout/: activity_main.xml
android-simple/app/src/main/res/values/: strings.xml
android-simple/test-app/: build.gradle
android-simple/test-app/scripts/: populate_cache.py
android-simple/test-app/src/main/: AndroidManifest.xml
android-simple/test-app/src/main/cpp/: CMakeLists.txt  ProxyService.cpp  ProxyService.h  TSBridge.cpp  TSBridge.h  android_cmake_options.cmake
android-simple/test-app/src/main/cpp/ts/: HTTP.cpp  Http.h  HttpConfig.h  I_EventSystem.h  I_Net.h
android-simple/test-app/src/main/java/org/apache/trafficserver/test/: MainActivity.kt  TrafficServerProxyService.kt  TrafficServerVpnService.kt
android-simple/test-app/src/main/res/layout/: activity_main.xml
android-simple/test-app/src/main/res/values/: strings.xml
android-simple/test-app/src/main/res/xml/: network_security_config.xml
docker/: Dockerfile.android  README-android.md  docker-compose.android.yml
termux/: README.md  build-in-termux.sh
